--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@ngrx/effects": "^20.1.0",
     "@ngrx/store": "^20.1.0",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "firebase": "^11.10.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2"
   },
